--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               <span class="paperTitle">Grokked Transformers are Implicit Reasoners: A Mechanistic Journey to the Edge of Generalization
               </span> <br />
               <span class="paperAuthor">Boshi Wang, Xiang Yue, Yu Su, Huan Sun.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2405.15071">paper</a>] </span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2405.15071">paper</a>] [<a href="https://github.com/OSU-NLP-Group/GrokkedTransformer">code</a>]</span>
             </li>
             <li>
               <span class="paperTitle">Middleware for LLMs: Tools are Instrumental for Language Agents in Complex Environments
@@ -306,6 +306,12 @@
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.10890">paper</a>] </span>
               </li>
               <li>
+                <span class="paperTitle">MagicLens: Self-Supervised Image Retrieval with Open-Ended Instructions
+                </span> <br />
+                <span class="paperAuthor">Kai Zhang, Yi Luan, Hexiang Hu, Kenton Lee, Siyuan Qiao, Wenhu Chen, Yu Su, Ming-Wei Chang. In the International Conference on Machine Learning, 2024 (<b>ICML'24 Oral</b>)</span>
+                <span class="paperResource"> [<a href="https://open-vision-language.github.io/MagicLens/">project</a>][<a href="https://arxiv.org/abs/2403.19651">paper</a>] </span>
+              </li>
+              <li>
                 <span class="paperTitle">GPT-4V(ision) is a Generalist Web Agent, if Grounded
                 </span> <br />
                 <span class="paperAuthor">Boyuan Zheng, Boyu Gou, Jihyung Kil, Huan Sun, Yu Su. In the International Conference on Machine Learning, 2024 (<b>ICML'24</b>)</span>
@@ -316,12 +322,6 @@
                 </span> <br />
                 <span class="paperAuthor">Jian Xie*, Kai Zhang*, Jiangjie Chen, Tinghui Zhu, Renze Lou, Yuandong Tian, Yanghua Xiao, Yu Su. In the International Conference on Machine Learning, 2024 (<b>ICML'24</b>)</span>
                 <span class="paperResource"> [<a href="https://osu-nlp-group.github.io/TravelPlanner/">project website</a>] [<a href="https://arxiv.org/abs/2402.01622">paper</a>] [<a href="https://github.com/OSU-NLP-Group/TravelPlanner">code</a>] (*: Equal Contribution)</span>
-              </li>
-              <li>
-                <span class="paperTitle">MagicLens: Self-Supervised Image Retrieval with Open-Ended Instructions
-                </span> <br />
-                <span class="paperAuthor">Kai Zhang, Yi Luan, Hexiang Hu, Kenton Lee, Siyuan Qiao, Wenhu Chen, Yu Su, Ming-Wei Chang. In the International Conference on Machine Learning, 2024 (<b>ICML'24</b>)</span>
-                <span class="paperResource"> [<a href="https://open-vision-language.github.io/MagicLens/">project</a>][<a href="https://arxiv.org/abs/2403.19651">paper</a>] </span>
               </li>
                 <li>
                   <span class="paperTitle">BioCLIP: A Vision Foundation Model for the Tree of Life
