--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
               <li>
                 <span class="paperTitle">TravelPlanner: A Benchmark for Real-World Planning with Language Agents
                 </span> <br />
-                <span class="paperAuthor">Jian Xie*, Kai Zhang*, Jiangjie Chen, Tinghui Zhu, Renze Lou, Yuandong Tian, Yanghua Xiao, Yu Su. In the International Conference on Machine Learning, 2024 (<b>ICML'24</b>)</span>
+                <span class="paperAuthor">Jian Xie*, Kai Zhang*, Jiangjie Chen, Tinghui Zhu, Renze Lou, Yuandong Tian, Yanghua Xiao, Yu Su. In the International Conference on Machine Learning, 2024 (<b>ICML'24 Spotlight</b>)</span>
                 <span class="paperResource"> [<a href="https://osu-nlp-group.github.io/TravelPlanner/">project website</a>] [<a href="https://arxiv.org/abs/2402.01622">paper</a>] [<a href="https://github.com/OSU-NLP-Group/TravelPlanner">code</a>] (*: Equal Contribution)</span>
               </li>
                 <li>
