--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <a href="#publications">Publications</a>
         <a href="#awards">Awards</a>
         <a href="#teaching">Teaching</a>
-        <a href="#sponsors">Sponsors</a>
+        <a href="https://github.com/OSU-NLP-Group">Software</a>
+        <!-- <a href="#sponsors">Sponsors</a> -->
         <!-- <a href="#service">Service</a> -->
 	      <a href="#contact">Contact</a>
         <!--<a href="#teaching">Teaching</a> -->
@@ -763,6 +764,8 @@ probabilistic model and optimization algorithm for crowdsourcing.</span>
         <h2>Awards & Honors</h2>
         <div class="divider"></div>
         <ul>
+            <li>Best Student Paper Award, CVPR, 2024</li> 
+            <li>Best Paper Finalist, CVPR, 2024</li>
             <li>Outstanding Paper Award, ACL, 2023</li> 
             <li>Lumley Research Award, OSU, 2023</li>  
             <li>Outstanding Paper Award, COLING, 2022</li>  
