--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <ul>
             <li>
               <span class="paperTitle">A holistic and critical look at language agents (slides coming soon)</span> <br />
-              <span class="paperAuthor"><a href="https://cmu-agent-workshop.github.io/">CMU Agent Workshop</a>, JPMorgan Chase, Amazon AGI, Apple NLU Workshop</span>
+              <span class="paperAuthor"><a href="https://cmu-agent-workshop.github.io/">CMU Agent Workshop</a>, JPMorgan Chase, Amazon AGI, Apple NLU Workshop, Stanford</span>
             </li>
             <li>
               <span class="paperTitle">Language agents: a critical evolutionary step of AI (<a href="resources/language_agents_YuSu_2023.pdf">slides</a>)</span> <br />
@@ -269,13 +269,6 @@
               <span class="paperAuthor">Lingbo Mo, Zeyi Liao, Boyuan Zheng, Yu Su, Chaowei Xiao, Huan Sun.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.10196">paper</a>] </span>
             </li>
-            <li>
-              <span class="paperTitle">Deductive Beam Search: Decoding Deducible Rationale for Chain-of-Thought Reasoning
-              </span> <br />
-              <span class="paperAuthor">Tinghui Zhu*, Kai Zhang*, Jian Xie, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2401.17686">paper</a>] [<a href="https://github.com/OSU-NLP-Group/Deductive-Beam-Search">code</a>] (*: Equal Contribution)</span>
-            </li>
-            
             
             <!-- <li>
               <span class="paperTitle">Bringing Back the Context: Camera Trap Species Identification as Link Prediction on Multimodal Knowledge Graphs
@@ -299,6 +292,12 @@
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
+              <li>
+                <span class="paperTitle">Deductive Beam Search: Decoding Deducible Rationale for Chain-of-Thought Reasoning
+                </span> <br />
+                <span class="paperAuthor">Tinghui Zhu*, Kai Zhang*, Jian Xie, Yu Su. In the Conference on Language Modeling, 2024 (<b>COLM'24</b>)</span></span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2401.17686">paper</a>] [<a href="https://github.com/OSU-NLP-Group/Deductive-Beam-Search">code</a>] (*: Equal Contribution)</span>
+              </li>
               <li>
                 <span class="paperTitle">LLMs in the Imaginarium: Tool Learning through Simulated Trial and Error
                 </span> <br />
