--- a/index.html
+++ b/index.html
@@ -269,13 +269,6 @@
               <span class="paperAuthor">Lingbo Mo, Zeyi Liao, Boyuan Zheng, Yu Su, Chaowei Xiao, Huan Sun.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.10196">paper</a>] </span>
             </li>
-            
-            <!-- <li>
-              <span class="paperTitle">Bringing Back the Context: Camera Trap Species Identification as Link Prediction on Multimodal Knowledge Graphs
-              </span> <br />
-              <span class="paperAuthor">Vardaan Pahuja, Weidi Luo, Yu Gu, Cheng-Hao Tu, Hong-You Chen, Tanya Berger-Wolf, Charles Stewart, Song Gao, Wei-Lun Chao, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2401.00608">paper</a>] </span>
-            </li> -->
             <li>
               <span class="paperTitle">Multimodal Question Answering for Unified Information Extraction
               </span> <br />
@@ -297,6 +290,12 @@
                 </span> <br />
                 <span class="paperAuthor">Tinghui Zhu*, Kai Zhang*, Jian Xie, Yu Su. In the Conference on Language Modeling, 2024 (<b>COLM'24</b>)</span></span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2401.17686">paper</a>] [<a href="https://github.com/OSU-NLP-Group/Deductive-Beam-Search">code</a>] (*: Equal Contribution)</span>
+              </li>
+              <li>
+              <span class="paperTitle">Reviving the Context: Camera Trap Species Classification as Link Prediction on Multimodal Knowledge Graphs
+              </span> <br />
+              <span class="paperAuthor">Vardaan Pahuja, Weidi Luo, Yu Gu, Cheng-Hao Tu, Hong-You Chen, Tanya Berger-Wolf, Charles Stewart, Song Gao, Wei-Lun Chao, Yu Su. In the ACM International Conference on Information and Knowledge Management (<b>CIKM'24</b>)</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2401.00608">paper</a>] </span>
               </li>
               <li>
                 <span class="paperTitle">LLMs in the Imaginarium: Tool Learning through Simulated Trial and Error
