--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <li><a href="https://chensj98.github.io/">Shijie Chen</a> (AU21 &#8211, co-advised with Huan Sun)</li>
             <li><a href="https://samuelstevens.me/">Sam Stevens</a> (AU21 &#8211)</li>
             <li><a href="https://drogozhang.github.io/">Kai Zhang</a> (AU22 &#8211)</li>
-            <li>Jiaman (Lisa) Wu (AU22 &#8211, co-advised with Wei-Lun Chao)</li>
+            <li><a href="https://scholar.google.com/citations?user=0wfNprQAAAAJ&hl=en">Jiaman (Lisa) Wu</a> (AU22 &#8211, co-advised with Wei-Lun Chao)</li>
             <li><a href="https://boyuanzheng010.github.io/">Boyuan Zheng</a> (AU23 &#8211)</li>
             <li><a href="https://yihengshu.github.io/">Yiheng Shu</a> (AU23 &#8211)</li>
           </ul>
