--- a/index.html
+++ b/index.html
@@ -258,12 +258,6 @@
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2405.15071">paper</a>] [<a href="https://github.com/OSU-NLP-Group/GrokkedTransformer">code</a>]</span>
             </li>
             <li>
-              <span class="paperTitle">Middleware for LLMs: Tools are Instrumental for Language Agents in Complex Environments
-              </span> <br />
-              <span class="paperAuthor">Yu Gu, Yiheng Shu, Hao Yu, Xiao Liu, Yuxiao Dong, Jie Tang, Jayanth Srinivasa, Hugo Latapie, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.14672">paper</a>] </span>
-            </li>
-            <li>
               <span class="paperTitle">A Trembling House of Cards? Mapping Adversarial Attacks against Language Agents
               </span> <br />
               <span class="paperAuthor">Lingbo Mo, Zeyi Liao, Boyuan Zheng, Yu Su, Chaowei Xiao, Huan Sun.</span>
@@ -285,6 +279,12 @@
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
+              <li>
+                <span class="paperTitle">Middleware for LLMs: Tools are Instrumental for Language Agents in Complex Environments
+                </span> <br />
+                <span class="paperAuthor">Yu Gu, Yiheng Shu, Hao Yu, Xiao Liu, Yuxiao Dong, Jie Tang, Jayanth Srinivasa, Hugo Latapie, Yu Su. In the onference on Empirical Methods in Natural Language Processing, 2023 (<b>EMNLP'24</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.14672">paper</a>] </span>
+              </li>
               <li>
                 <span class="paperTitle">Deductive Beam Search: Decoding Deducible Rationale for Chain-of-Thought Reasoning
                 </span> <br />
