--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li>
+            <li>09/2024: Recent services: Senior Area Chair for ICLR'25, Area Chair for ACL'24, EMNLP'24, COLM'24.</li>
             <li>06/2024: Honored to receive <b>Best Student Paper Award</b> (BioCLIP) and <b>Best Paper Finalist</b> (MMMU) at CVPR'24!</li>
             <li>05/2024: Thrilled to release <a href="https://arxiv.org/abs/2405.14831">HippoRAG</a> and bring my passion about biological intelligence into AI!</li>
             <li>05/2024: 2 papers accepted to ACL'24: <a href="https://arxiv.org/abs/2403.04746">tool learning through simulated trial and error</a> and <a href="https://arxiv.org/abs/2402.10890">planning with LLMs</a> (or why it's hard).</li>
