--- a/index.html
+++ b/index.html
@@ -244,20 +244,8 @@
         <div class="publication">
 	      <div style="margin-bottom: 10px;font-size: 18px">(<a href="https://scholar.google.com/citations?user=rIh5OqoAAAAJ&hl=en">Google Scholar</a>) (<a href="https://yusu.substack.com/">Blog</a>)</div>	
 
-          <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
+          <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
-            <li>
-              <span class="paperTitle">HippoRAG: Neurobiologically Inspired Long-Term Memory for Large Language Models
-              </span> <br />
-              <span class="paperAuthor">Bernal Jiménez Gutiérrez, Yiheng Shu, Yu Gu, Michihiro Yasunaga, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2405.14831">paper</a>] [<a href="https://github.com/OSU-NLP-Group/HippoRAG">code</a>]</span>
-            </li>
-            <li>
-              <span class="paperTitle">Grokked Transformers are Implicit Reasoners: A Mechanistic Journey to the Edge of Generalization
-              </span> <br />
-              <span class="paperAuthor">Boshi Wang, Xiang Yue, Yu Su, Huan Sun.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2405.15071">paper</a>] [<a href="https://github.com/OSU-NLP-Group/GrokkedTransformer">code</a>]</span>
-            </li>
             <li>
               <span class="paperTitle">A Trembling House of Cards? Mapping Adversarial Attacks against Language Agents
               </span> <br />
@@ -276,10 +264,28 @@
               <span class="paperAuthor">Samuel Stevens, Yu Su.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.10445">paper</a>] [<a href="https://samuelstevens.me/research/encryption/">blog</a>] [<a href="https://github.com/OSU-NLP-Group/SELM">code</a>]</span>
               </li>
-	        </ul>
+	        </ul> -->
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
+              <li>
+                <span class="paperTitle">HippoRAG: Neurobiologically Inspired Long-Term Memory for Large Language Models
+                </span> <br />
+                <span class="paperAuthor">Bernal Jiménez Gutiérrez, Yiheng Shu, Yu Gu, Michihiro Yasunaga, Yu Su. In the Conference on Neural Information Processing Systems, 2024 (<b>NeurIPS'24</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2405.14831">paper</a>] [<a href="https://github.com/OSU-NLP-Group/HippoRAG">code</a>]</span>
+              </li>
+              <li>
+                <span class="paperTitle">Grokked Transformers are Implicit Reasoners: A Mechanistic Journey to the Edge of Generalization
+                </span> <br />
+                <span class="paperAuthor">Boshi Wang, Xiang Yue, Yu Su, Huan Sun. In the Conference on Neural Information Processing Systems, 2024 (<b>NeurIPS'24</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2405.15071">paper</a>] [<a href="https://github.com/OSU-NLP-Group/GrokkedTransformer">code</a>]</span>
+              </li>
+              <li>
+                <span class="paperTitle">Fine-Tuning is Fine, if Calibrated
+                </span> <br />
+                <span class="paperAuthor">Zheda Mai, Arpita Chowdhury, Ping Zhang, Cheng-Hao Tu, Hong-You Chen, Vardaan Pahuja, Tanya Berger-Wolf, Song Gao, Charles Stewart, Yu Su, Wei-Lun Chao. In the Conference on Neural Information Processing Systems, 2024 (<b>NeurIPS'24</b>)</span>
+                <span class="paperResource"> [<a href="#">paper</a>] </span>
+              </li>
               <li>
                 <span class="paperTitle">Middleware for LLMs: Tools are Instrumental for Language Agents in Complex Environments
                 </span> <br />
