--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li>
+            <li>09/2024: 4 papers accepted to NeurIPS'24 and 1 paper to EMNLP'24: <a href="https://arxiv.org/abs/2405.14831">HippoRAG</a>, <a href="https://arxiv.org/abs/2405.15071">Grokked Transformers</a>, Calibrated Fine-tuning, <a href="https://arxiv.org/abs/2408.16176">VLM4Bio</a>, and <a href="https://arxiv.org/abs/2402.14672">Middleware for LLMs</a>.</li>
             <li>09/2024: Recent services: Senior Area Chair for ICLR'25, Area Chair for ACL'24, EMNLP'24, COLM'24.</li>
             <li>06/2024: Honored to receive <b>Best Student Paper Award</b> (BioCLIP) and <b>Best Paper Finalist</b> (MMMU) at CVPR'24!</li>
             <li>05/2024: Thrilled to release <a href="https://arxiv.org/abs/2405.14831">HippoRAG</a> and bring my passion about biological intelligence into AI!</li>
@@ -285,6 +286,12 @@
                 </span> <br />
                 <span class="paperAuthor">Zheda Mai, Arpita Chowdhury, Ping Zhang, Cheng-Hao Tu, Hong-You Chen, Vardaan Pahuja, Tanya Berger-Wolf, Song Gao, Charles Stewart, Yu Su, Wei-Lun Chao. In the Conference on Neural Information Processing Systems, 2024 (<b>NeurIPS'24</b>)</span>
                 <span class="paperResource"> [<a href="#">paper</a>] </span>
+              </li>
+              <li>
+                <span class="paperTitle">VLM4Bio: A Benchmark Dataset to Evaluate Pretrained Vision-Language Models for Trait Discovery from Biological Images
+                </span> <br />
+                <span class="paperAuthor">M Maruf, Arka Daw, Kazi Sajeed Mehrab, Harish Babu Manogaran, Abhilash Neog, Medha Sawhney, Mridul Khurana, James P Balhoff, Yasin Bakis, Bahadir Altintas, Matthew J Thompson, Elizabeth G Campolongo, Josef C Uyeda, Hilmar Lapp, Henry L Bart, Paula M Mabee, Yu Su, Wei-Lun Chao, Charles Stewart, Tanya Berger-Wolf, Wasila Dahdul, Anuj Karpatne. In the Conference on Neural Information Processing Systems, 2024 (<b>NeurIPS'24 D&B</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2408.16176">paper</a>] </span>
               </li>
               <li>
                 <span class="paperTitle">Middleware for LLMs: Tools are Instrumental for Language Agents in Complex Environments
