--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <span class="paperTitle">Fine-Tuning is Fine, if Calibrated
                 </span> <br />
                 <span class="paperAuthor">Zheda Mai, Arpita Chowdhury, Ping Zhang, Cheng-Hao Tu, Hong-You Chen, Vardaan Pahuja, Tanya Berger-Wolf, Song Gao, Charles Stewart, Yu Su, Wei-Lun Chao. In the Conference on Neural Information Processing Systems, 2024 (<b>NeurIPS'24</b>)</span>
-                <span class="paperResource"> [<a href="#">paper</a>] </span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2409.16223">paper</a>] </span>
               </li>
               <li>
                 <span class="paperTitle">VLM4Bio: A Benchmark Dataset to Evaluate Pretrained Vision-Language Models for Trait Discovery from Biological Images
@@ -296,7 +296,7 @@
               <li>
                 <span class="paperTitle">Middleware for LLMs: Tools are Instrumental for Language Agents in Complex Environments
                 </span> <br />
-                <span class="paperAuthor">Yu Gu, Yiheng Shu, Hao Yu, Xiao Liu, Yuxiao Dong, Jie Tang, Jayanth Srinivasa, Hugo Latapie, Yu Su. In the onference on Empirical Methods in Natural Language Processing, 2023 (<b>EMNLP'24</b>)</span>
+                <span class="paperAuthor">Yu Gu, Yiheng Shu, Hao Yu, Xiao Liu, Yuxiao Dong, Jie Tang, Jayanth Srinivasa, Hugo Latapie, Yu Su. In the Conference on Empirical Methods in Natural Language Processing, 2024 (<b>EMNLP'24</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2402.14672">paper</a>] </span>
               </li>
               <li>
