--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   	<h1>Yu Su (<span style="font-family:Georgia,Times New Roman,KaiTi,STKaiti,serif;font-size:32pt">苏煜</span>)</h1>
   	<div id="header">
     	<a href="#">Home</a>
-        <a href="resources/CV_YuSu.pdf">CV</a>
+        <!-- <a href="resources/CV_YuSu.pdf">CV</a> -->
+         <a href="#news">News</a>
         <!-- <a href="#experience">Experience</a> -->
         <a href="#student">Students</a>
         <a href="#publications">Publications</a>
