--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
             <li><a href="https://scholar.google.com/citations?user=0wfNprQAAAAJ&hl=en">Jiaman (Lisa) Wu</a> (AU22 &#8211, co-advised with Wei-Lun Chao)</li>
             <li><a href="https://boyuanzheng010.github.io/">Boyuan Zheng</a> (AU23 &#8211)</li>
             <li><a href="https://yihengshu.github.io/">Yiheng Shu</a> (AU23 &#8211)</li>
+            <li><a href="https://boyugou.github.io/">Boyu Gou</a> (AU23 &#8211)</li>
           </ul>
         <!-- <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Master Students</b></p>
         <ul>
