--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li>
+            <li>11/2024: Talk at University of Michigan, Princeton University, LMU Munich/TU Darmstadt on language agents.</li>
             <li>09/2024: 4 papers accepted to NeurIPS'24 and 1 paper to EMNLP'24: <a href="https://arxiv.org/abs/2405.14831">HippoRAG</a>, <a href="https://arxiv.org/abs/2405.15071">Grokked Transformers</a>, Calibrated Fine-tuning, <a href="https://arxiv.org/abs/2408.16176">VLM4Bio</a>, and <a href="https://arxiv.org/abs/2402.14672">Middleware for LLMs</a>.</li>
             <li>09/2024: Recent services: Senior Area Chair for ICLR'25, Area Chair for ACL'24, EMNLP'24, COLM'24.</li>
             <li>06/2024: Honored to receive <b>Best Student Paper Award</b> (BioCLIP) and <b>Best Paper Finalist</b> (MMMU) at CVPR'24!</li>
@@ -192,8 +193,8 @@
         <div class="publication">
           <ul>
             <li>
-              <span class="paperTitle">A holistic and critical look at language agents (slides coming soon)</span> <br />
-              <span class="paperAuthor"><a href="https://cmu-agent-workshop.github.io/">CMU Agent Workshop</a>, JPMorgan Chase, Amazon AGI, Apple NLU Workshop, Stanford</span>
+              <span class="paperTitle">A holistic and critical look at language agents (<a href="resources/language_agents_YuSu_2024.pdf">slides</a>)</span> <br />
+              <span class="paperAuthor"><a href="https://cmu-agent-workshop.github.io/">CMU Agent Workshop</a>, JPMorgan Chase, Amazon AGI, Apple NLU Workshop, LMU Munich/TU Darmstadt, Stanford, Princeton</span>
             </li>
             <li>
               <span class="paperTitle">Language agents: a critical evolutionary step of AI (<a href="resources/language_agents_YuSu_2023.pdf">slides</a>)</span> <br />
