--- a/index.html
+++ b/index.html
@@ -193,8 +193,16 @@
         <div class="publication">
           <ul>
             <li>
+              <span class="paperTitle">Tutorial: Language Agents: Foundations, Prospects, and Risks (<a href="https://tinyurl.com/language-agent-tutorial-2024">slides</a>)</span> <br />
+              <span class="paperAuthor"><a href="https://language-agent-tutorial.github.io/">EMNLP 2024</a> (w/ Diyi Yang, Shunyu Yao, Tao Yu)</span>
+            </li>
+            <li>
               <span class="paperTitle">A holistic and critical look at language agents (<a href="resources/language_agents_YuSu_2024.pdf">slides</a>)</span> <br />
               <span class="paperAuthor"><a href="https://cmu-agent-workshop.github.io/">CMU Agent Workshop</a>, JPMorgan Chase, Amazon AGI, Apple NLU Workshop, LMU Munich/TU Darmstadt, Stanford, Princeton</span>
+            </li>
+            <li>
+              <span class="paperTitle">Web Agents: A New Frontier for Embodied Agents (<a href="https://tinyurl.com/web-agents-2024">slides</a>)</span> <br />
+              <span class="paperAuthor"><a href="https://cse.engin.umich.edu/event/yu-su-seminar-guest-lecture">University of Michigan</a>, <a href="https://splu-robonlp-2024.github.io/">SpLU-RoboNLP Workshop@ACL'24</a></span>
             </li>
             <li>
               <span class="paperTitle">Language agents: a critical evolutionary step of AI (<a href="resources/language_agents_YuSu_2023.pdf">slides</a>)</span> <br />
