--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <div class="publication">
           <ul>
             <li>
-              <span class="paperTitle">Tutorial: Language Agents: Foundations, Prospects, and Risks (<a href="https://tinyurl.com/language-agent-tutorial-2024">slides</a>)</span> <br />
+              <span class="paperTitle">Tutorial: Language Agents: Foundations, Prospects, and Risks (<a href="https://tinyurl.com/language-agent-tutorial-2024">slides</a>) (<a href="https://tinyurl.com/agent-tutorial-recording-2024">recording</a>)</span> <br />
               <span class="paperAuthor"><a href="https://language-agent-tutorial.github.io/">EMNLP 2024</a> (w/ Diyi Yang, Shunyu Yao, Tao Yu)</span>
             </li>
             <li>
@@ -203,7 +203,7 @@
             </li>
             <li>
               <span class="paperTitle">Web Agents: A New Frontier for Embodied Agents (<a href="https://tinyurl.com/web-agents-2024">slides</a>)</span> <br />
-              <span class="paperAuthor"><a href="https://cse.engin.umich.edu/event/yu-su-seminar-guest-lecture">University of Michigan</a>, <a href="https://splu-robonlp-2024.github.io/">SpLU-RoboNLP Workshop@ACL'24</a></span>
+              <span class="paperAuthor"><a href="https://cse.engin.umich.edu/event/yu-su-seminar-guest-lecture">University of Michigan</a>, <a href="https://splu-robonlp-2024.github.io/">SpLU-RoboNLP Workshop@ACL'24</a>, ServiceNow</span>
             </li>
             <!-- <li>
               <span class="paperTitle">Language Agents: A Critical Evolutionary Step of AI (<a href="resources/language_agents_YuSu_2023.pdf">slides</a>)</span> <br />
