--- a/index.html
+++ b/index.html
@@ -202,6 +202,10 @@
               <span class="paperAuthor"><a href="https://cmu-agent-workshop.github.io/">CMU Agent Workshop</a>, JPMorgan Chase, Amazon AGI, Apple NLU Workshop, LMU Munich/TU Darmstadt, Stanford, Princeton</span>
             </li>
             <li>
+              <span class="paperTitle">Pressing Safety Issues with Language Agents (<a href="https://tinyurl.com/language-agent-tutorial-2024">slides</a>) (<a href="https://tinyurl.com/agent-tutorial-recording-2024">recording</a>)</span> <br />
+              <span class="paperAuthor"><a href="https://language-agent-tutorial.github.io/">EMNLP 2024</a> (w/ Diyi Yang, Shunyu Yao, Tao Yu)</span>
+            </li>
+            <li>
               <span class="paperTitle">Web Agents: A New Frontier for Embodied Agents (<a href="https://tinyurl.com/web-agents-2024">slides</a>)</span> <br />
               <span class="paperAuthor"><a href="https://cse.engin.umich.edu/event/yu-su-seminar-guest-lecture">University of Michigan</a>, <a href="https://splu-robonlp-2024.github.io/">SpLU-RoboNLP Workshop@ACL'24</a>, ServiceNow</span>
             </li>
