--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li>
+            <li>12/2024: Talk at NeurIPS workshop about <a href="https://tinyurl.com/language-agent-safety-2024">agent safety</a>.</li>
             <li>11/2024: Check out our tutorial "<a href="https://language-agent-tutorial.github.io/">Language Agents: Foundations, Prospects, and Risks</a>" at EMNLP'24!</li>
             <li>11/2024: Talk at University of Michigan, Princeton University, LMU Munich/TU Darmstadt on language agents.</li>
             <li>09/2024: 4 papers accepted to NeurIPS'24 and 1 paper to EMNLP'24: <a href="https://arxiv.org/abs/2405.14831">HippoRAG</a>, <a href="https://arxiv.org/abs/2405.15071">Grokked Transformers</a>, Calibrated Fine-tuning, <a href="https://arxiv.org/abs/2408.16176">VLM4Bio</a>, and <a href="https://arxiv.org/abs/2402.14672">Middleware for LLMs</a>.</li>
@@ -202,8 +203,8 @@
               <span class="paperAuthor"><a href="https://cmu-agent-workshop.github.io/">CMU Agent Workshop</a>, JPMorgan Chase, Amazon AGI, Apple NLU Workshop, LMU Munich/TU Darmstadt, Stanford, Princeton</span>
             </li>
             <li>
-              <span class="paperTitle">Pressing Safety Issues with Language Agents (<a href="https://tinyurl.com/language-agent-tutorial-2024">slides</a>) (<a href="https://tinyurl.com/agent-tutorial-recording-2024">recording</a>)</span> <br />
-              <span class="paperAuthor"><a href="https://language-agent-tutorial.github.io/">EMNLP 2024</a> (w/ Diyi Yang, Shunyu Yao, Tao Yu)</span>
+              <span class="paperTitle">Pressing Safety Issues with Language Agents (<a href="https://tinyurl.com/language-agent-safety-2024">slides</a>) (<a href="https://neurips.cc/virtual/2024/workshop/84748">recording</a> [starting 5:44:00; login required])</span> <br />
+              <span class="paperAuthor"><a href="https://www.mlsafety.org/events/neurips/2024">NeurIPS 2024 Agent Safety Workshop</a> </span>
             </li>
             <li>
               <span class="paperTitle">Web Agents: A New Frontier for Embodied Agents (<a href="https://tinyurl.com/web-agents-2024">slides</a>)</span> <br />
